--- a/members-only/app/views/layouts/_footer.html.erb
+++ b/members-only/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
   <small>
-    <%= link_to "Logout", :method => :delete %>
+    <%= link_to "Logout", logout_path, method: "delete" %>
   </small>
 </footer>
