Completed authentication and authorization system

--- a/members-only/app/views/layouts/_footer.html.erb
+++ b/members-only/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer class="footer">
+  <% if signed_in? %>      
   <small>
     <%= link_to "Logout", logout_path, method: "delete" %>
   </small>
+  <% end %>
 </footer>
