--- a/members-only/app/views/layouts/_header.html.erb
+++ b/members-only/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", '#', id: "logo" %>
+    <%= link_to "members only", posts_path, id: "logo" %>
   </div>
 </header>
