--- a/members-only/app/views/layouts/_header.html.erb
+++ b/members-only/app/views/layouts/_header.html.erb
@@ -1,5 +1,15 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "members only", posts_path, id: "logo" %>
-  </div>
+    <div class="container">
+        <%= link_to "members only", posts_path, id: "logo" %>
+        <nav>
+            <ul class="nav navbar-nav navbar-right">
+                <li><%= link_to "Create Post", '/posts/new' %></li>
+                <% if !signed_in? %>
+                    <li><%= link_to "Log in", login_path %></li>
+                <% else %>
+                    <li><%= link_to "Logout", logout_path, method: "delete" %></li>
+                <% end %>
+            </ul>
+        </nav>
+    </div>
 </header>
