Added past and upcoming events

--- a/private_events/app/views/events/show.html.erb
+++ b/private_events/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-Creator: <%= @event.creator.name %>
+<h2>Creator: <%= link_to @event.creator.name, user_path(@event.creator.id) %></h2>
 
 <h3>Attendees</h3>
 <% @event.attendees.each do |attendee| %>
