--- a/private_events/app/views/events/index.html.erb
+++ b/private_events/app/views/events/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Listing Events</h1> 
-
-<% @events.each do |event| %>
+<h2>Upcoming</h2>
+<% @events.upcoming.each do |event| %>
+        ========================================================
+        <h3><%= link_to event.name, event_path(event.id) %></h3>
+        ========================================================
+<% end %>
+<h2>Past Events</h2>
+<% @events.past.each do |event| %>
+        ========================================================
         <h3><%= link_to event.name, event_path(event.id) %></h3>
         ========================================================
 <% end %>
