--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
         <% if signed_in? %>
-            <%= link_to "private events", user_path(@current_user.id), id: "logo" %>
+            <%= link_to "private events", root_path, id: "logo" %>
         <% else %>
             <%= link_to "private events", login_path, id: "logo" %>
         <% end %>
